--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,72 @@
 .App-link {
   color: #09d3ac;
 }
+
+
+.chatApp h1 {
+  color:white;
+  background-color: #1E88E5;
+  position: fixed;
+  top:0px;
+  width: 100%;
+  padding: 5px;
+  margin-top:0px;
+  height:50px;
+}
+
+.msg-list  {
+  /* border: solid 1px blue; */
+  list-style-type: none;
+  padding-left:20px;
+  padding-right:20px;
+  margin-top:60px;
+  height:300px;
+  overflow-y: scroll;
+  margin-bottom:0px;
+}
+
+.msg-list li {
+  /* border: solid 1px red; */
+  list-style-type: none;
+  margin-left:0px;
+  margin-bottom:10px;
+}
+
+.msg-list div {
+  width:400px;
+}
+
+.msg-list .bubble-left {
+  text-align:left;
+  float:left;
+}
+.msg-list .bubble-right {
+  text-align:right;
+  float:right;
+
+}
+
+.msg-list li p{
+  margin:0px;
+}
+
+form {
+  /* border: solid 1px red; */
+  padding:10px;
+  margin-top:0px;
+}
+
+form input#txt {
+  width:90%;
+  height:30px
+}
+
+form input#txt {
+  width:90%;
+  height:30px
+}
+
+form input#sbm {
+
+  height:35px
+}
