--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
-
-
 .chatApp h1 {
   color:white;
   background-color: #1E88E5;
@@ -34,7 +10,6 @@
 }
 
 .msg-list  {
-  /* border: solid 1px blue; */
   list-style-type: none;
   padding-left:20px;
   padding-right:20px;
@@ -42,50 +17,38 @@
   height:300px;
   overflow-y: scroll;
   margin-bottom:0px;
+
+  /* width: 300px; */
+  border: solid 1px #EEE;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
-.msg-list li {
-  /* border: solid 1px red; */
-  list-style-type: none;
-  margin-left:0px;
-  margin-bottom:10px;
-}
-
-.msg-list div {
-  width:400px;
-}
-
-.msg-list .bubble-left {
-  text-align:left;
-  float:left;
-}
-.msg-list .bubble-right {
-  text-align:right;
-  float:right;
-
-}
-
-.msg-list li p{
+.msg-list p{
   margin:0px;
 }
 
-form {
-  /* border: solid 1px red; */
+.bubble-right {
+  float:right
+}
+.bubble-left {
+  float:left
+}
+
+.bubble {
+  max-width:300px;
   padding:10px;
-  margin-top:0px;
+  border-radius: 10px;
+  margin-bottom:10px;
 }
 
-form input#txt {
-  width:90%;
-  height:30px
+.bubble-left>.bubble{
+  background-color: #1E88E5;
+  color:#eee;
 }
 
-form input#txt {
-  width:90%;
-  height:30px
-}
-
-form input#sbm {
-
-  height:35px
+.bubble-right>.bubble{
+  background-color: lightgrey;
+  color:black;
 }
